# wikidata-tool-repo

./: .gitmodules  Cargo.toml  README.md
cache/wikidata/: Q1013763.json  Q1022366.json  Q1034415.json  Q1042397.json  Q104394.json  Q104870483.json  Q1051282.json  Q105623664.json  Q1060083.json  Q1063062.json  Q106650558.json  Q1068652.json  Q107341874.json  Q1074037.json  Q107451751.json  Q10834367.json  Q108470873.json  Q1092491.json  Q110940720.json  Q1118153.json  Q111893936.json  Q1121892.json  Q11230172.json  Q1130524.json  Q113493081.json  Q1141067.json  Q1141188.json  Q1141869.json  Q1152399.json  Q116745226.json  Q11707952.json  Q1172412.json  Q11774329.json  Q1179644.json  Q1197550.json  Q1199356.json  Q1211457.json  Q121572.json  Q124463276.json  Q1268939.json  (+352 more)
docs/: CRQ-059-wikipedia-wikidata-extractor.md  future_plan.md
other/: wiki.txt
other/generated_wiki_templates/: Cargo.toml  build.rs
other/generated_wiki_templates/src/: lib.rs
other/generated_wikiproject_crates/solfunmeme/: Cargo.toml
other/wiki_data_extractor/: Cargo.toml
other/wiki_data_extractor/src/: main.rs
other/wikimedia-template-introspector/: Cargo.toml
other/wikimedia-template-introspector-core/: Cargo.toml
other/wikimedia-template-introspector-core/src/: lib.rs  template_code_generator.rs
other/wikimedia-template-introspector/src/: lib.rs  parser_codegen.rs  parser_codegen.rs~
prelude/: README.md
src/: cache.rs  data_structures.rs  lib.rs  main.rs  wikidata_client.rs  wikipedia_parser.rs
tests/: integration_test.rs
wikipedia_extractor/cache/wikidata/: Q768046.json
(+1 files in other folders)
