[package]
name = "wikidata-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-tool-prelude = { path = "prelude" }
git2 = "0.19"
regex = "1.0"
lazy_static = "1.4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wikipedia = "0.5.0"
wikidata = "1.1.0"
