[package]
name = "wikimedia-template-introspector"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
regex = "1.10.5"
quote = "1.0.36"
syn = { version = "2.0.60", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.82"
wikimedia-template-introspector-core = { path = "../wikimedia-template-introspector-core" }